[tool.poetry]
name = "snack-attack"
version = "0.1.0"
description = ""
authors = ["MasonChance <mason.fryberger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"

[tool.poetry.dev-dependencies]
pylint = "^2.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
